gccida/c3/get_varargs_alias_set
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_varargs_alias_set/src/alias.c:1174:10: error: use of undeclared identifier 'get_varargs_alias_set_set'; did you mean 'get_varargs_alias_set'?
result = get_varargs_alias_set_set; 
         ^~~~~~~~~~~~~~~~~~~~~~~~~
         get_varargs_alias_set
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_varargs_alias_set/src/alias.c:1170:10: note: 'get_varargs_alias_set' declared here
__int64  get_varargs_alias_set( ) 
         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_varargs_alias_set/src/alias.c:1175:6: error: use of undeclared identifier 'get_varargs_alias_set_set'; did you mean 'get_varargs_alias_set'?
if ( get_varargs_alias_set_set == -1 ) 
     ^~~~~~~~~~~~~~~~~~~~~~~~~
     get_varargs_alias_set
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_varargs_alias_set/src/alias.c:1170:10: note: 'get_varargs_alias_set' declared here
__int64  get_varargs_alias_set( ) 
         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_varargs_alias_set/src/alias.c:1179:10: error: use of undeclared identifier 'new_alias_set_last_alias_set'
result = new_alias_set_last_alias_set + 1; 
         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_varargs_alias_set/src/alias.c:1180:1: error: use of undeclared identifier 'new_alias_set_last_alias_set'
new_alias_set_last_alias_set = result; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_varargs_alias_set/src/alias.c:1181:1: error: use of undeclared identifier 'get_varargs_alias_set_set'
get_varargs_alias_set_set = result; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_varargs_alias_set/src/alias.c:1186:1: error: use of undeclared identifier 'get_varargs_alias_set_set'
get_varargs_alias_set_set = 0LL; 
^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/get_varargs_alias_set/src/obj/alias.o] Error 1
